--- a/CollegePal/app/src/main/AndroidManifest.xml
+++ b/CollegePal/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -54,6 +62,10 @@
         <activity
             android:name=".Courses.CourseActivity"
             android:label="@string/title_activity_course" >
+        </activity>
+        <activity
+            android:name=".Calendar.CalendarActivity"
+            android:label="@string/title_activity_calendar" >
         </activity>
     </application>
 
