--- a/CollegePal/app/src/main/AndroidManifest.xml
+++ b/CollegePal/app/src/main/AndroidManifest.xml
@@ -82,6 +82,11 @@
             android:name=".Courses.CourseDashBoard"
             android:label="@string/title_activity_course_dash_board" >
         </activity>
+
+        <activity
+            android:name=".Calendar.CalendarActivity"
+            android:label="@string/title_activity_calendar" >
+        </activity>
     </application>
 
 </manifest>
